# mail-imap-mcp-rs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml
.github/workflows/: greenmail-integration.yml  imap-integration-tests.yml  init-npm-placeholder.yml  publish-docker.yml  publish-npm.yml  release-assets.yml  release.yml
docs/: advanced-configuration.md  cursor-pagination.md  message-id-format.md  security.md  tool-contract.md
npm/: package.json.tmpl
npm/app/: package.json
scripts/: test-greenmail-mcp-inspector.sh  test-greenmail.sh
scripts/install/: mail-imap-mcp-rs-installer.sh
src/: config.rs  imap.rs  mailbox_codec.rs  main.rs  message_id.rs  mime.rs  models.rs  pagination.rs  server.rs
src/server/: read.rs  session_cache.rs  types.rs  validation.rs  write_ops.rs
tests/fixtures/greenmail-preload/test@localhost/Archive/2025/: 01-q4-summary.eml  02-invoice-december.eml
tests/fixtures/greenmail-preload/test@localhost/Drafts/: 01-quarterly-update-draft.eml
tests/fixtures/greenmail-preload/test@localhost/INBOX/: 01-roadmap-review.eml  02-oncall-handoff.eml  03-build-alert.eml  04-rust-news-digest.eml
tests/fixtures/greenmail-preload/test@localhost/Newsletters/: 01-platform-news.eml
tests/fixtures/greenmail-preload/test@localhost/Sent/: 01-client-follow-up.eml  02-launch-plan.eml
tests/fixtures/greenmail-preload/test@localhost/Spam/: 01-password-reset-scam.eml
