[package]
name = "mail-imap-mcp-rs"
version = "0.3.2"
edition = "2024"
license = "MIT"
description = "Secure IMAP MCP server over stdio with cursor-based pagination, multi-account support, and TLS-only connections"
repository = "https://github.com/bradsjm/mail-imap-mcp-rs"
readme = "README.md"
keywords = ["mcp", "imap", "email", "mail", "protocol"]
categories = ["email", "api-bindings"]

[dependencies]
ammonia = "4.1.2"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
axum = "0.8.6"
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.49", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.32"
html2text = "0.16.7"
mailparse = "0.16.1"
pdf-extract = "0.10.0"
regex = "1.12.3"
rmcp = { version = "1.3.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.0"
schemars = "1.2.1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "net", "io-std", "signal", "time"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.16"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
utf7-imap = "0.3.2"
uuid = { version = "1.23.0", features = ["v4"] }
webpki-roots = "1.0.6"
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
